# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: main.yml
gendiff/: __init__.py  cli.py  load_data.py  main.py  tree.py
gendiff/formatters/: __init__.py  formatting.py  json_format.py  normalize.py  plain_format.py  stylish_format.py
gendiff/scripts/: gendiff.py  main.py  parser.py
tests/: test_cli.py  test_generate_diff.py
tests/fixtures/: cli_out.txt  help_output.txt  res_json_1.txt  res_json_2.txt
