[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Second project on the Hexlet course Python Developer"
authors = ["Dmitry Yuroff <yuroff.dmitry@gmail.com>"]
readme = "README.md"

packages = [
    { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "gendiff.main:main"